# Usql

./: .gitignore  CHANGELOG.md  LICENCE  README.md  pyproject.toml  school.db  setup.py  tree.py
examples/: test_count.py  test_create_table.py  test_crud.py  test_crud2.py  test_filter.py  test_get.py  test_instance.py  test_model.py  test_mysql.py  test_operators.py  test_postgres.py  test_schema.py  test_sqlite.py  test_where.py
usql/: __init__.py
usql.egg-info/: PKG-INFO  SOURCES.txt
usql/adapters/: mysql.py  postgres.py  sqlite.py
usql/core/: context.py  database.py  engine.py  session.py  usql.py
usql/fields/: base.py  integer.py  string.py
usql/models/: base.py  manager.py  metamodel.py  registry.py
usql/query/: builder.py  filters.py  manager.py  operators.py  queryset.py
usql/schema/: builder.py  manager.py  registry.py
usql/utils/: exceptions.py  logger.py
